# trip-tale

./: .gitignore  README.md  ffmpeg_command.json  files.txt  final_video.MOV  image_files.txt  movie_files.txt  movie_metadata.json  pyproject.toml  video_files.txt
lambda/ffmpeg-image/: Dockerfile
lambda/format-video/: Dockerfile  build-and-push.sh  lambda_function.py
lambda/merge-videos/: Dockerfile  build-and-push.sh  lambda_function.py
lambda/preparation/: preparer.py
lambda/slideshow/: build-and-push.sh  lambda_function.py
src/: fps_getter.py  home_video_maker.py  image_rotater.py  make_slideshow.py  make_video_base.py  maker_base.py  merge_videos.py  mitene_dowonloader.py  slideshow_maker.py  trip_tale.py  video_merger.py  youtube_uploader.py
